test/should-fail/exploit-6.j
globals
    integer what
endglobals

function Magic takes nothing returns nothing
    local string what
endfunction

function test takes integer i returns nothing
    call test(what)
endfunction